fix queries expenses
